--- a/package.json
+++ b/package.json
@@ -2,10 +2,19 @@
   "name": "backendproject",
   "version": "1.0.0",
   "description": "A project for learning backend",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
+  "keywords": [
+    "javascript",
+    "backend",
+    "node"
+  ],
   "author": "Mrugesh Thesiya",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  }
 }
